# RayTracerNG

./: CMakeLists.txt  README.md  build.bat  build_installer.bat  imgui.ini  installer.iss  random_seed.txt  script.bat
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AboutModal.jsx  Architecture.jsx  Contribute.jsx  Download.jsx  Features.jsx  Gallery.jsx  SocialLinksModal.jsx  TechStack.jsx  TextPressure.jsx
src/: glad.c  main.cpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shaders.hpp  stb_image.h  window.cpp  window.hpp
